Bug 153421 - On windows, the picture croping tool miss the bottom left handle when scaling higher than 100%
Summary: On windows, the picture croping tool miss the bottom left handle when scaling...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:25.2.0
Keywords:
: 159189 (view as bug list)
Depends on:
Blocks: Image-Crop
  Show dependency treegraph
 
Reported: 2023-02-06 20:57 UTC by jul
Modified: 2024-08-22 16:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (213.72 KB, image/jpeg)
2023-02-07 06:05 UTC, jul
Details
button (105.19 KB, image/png)
2023-02-08 06:53 UTC, jul
Details
freeze before crash when turning full screen (191.96 KB, image/png)
2023-02-08 08:14 UTC, jul
Details
resize handle also missing (92.22 KB, image/png)
2023-02-08 09:50 UTC, jul
Details
switching to non-full screen displays the handles (1.06 MB, image/gif)
2023-02-08 09:50 UTC, jul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jul 2023-02-06 20:57:19 UTC
Description:
In writer, I paste a picture.
I want to crop it so I select it and then I clic the crop icon.
To croping handles appear, but, the bottom left one is missing.
The issue is on windows but it seems it is not on linux mint Vera (as far as I have seen).
It's in 7.4 and 7.5 versions.

Steps to Reproduce:
1. copy picture in writer and select it
2. clic "crop"
3.

Actual Results:
no crop handle at the bottom left

Expected Results:
6 croping handles, including at the bottom left


Reproducible: Always


User Profile Reset: No

Additional Info:
not necessary I gess
Comment 1 m_a_riosv 2023-02-06 22:13:00 UTC
No reproducible.
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Please test with a clean profile, Menu/Help/Restart in Safe Mode
Comment 2 jul 2023-02-07 06:05:13 UTC
Created attachment 185166 [details]
screenshot

Screenshot to show the issue.
NB : I assume I don't need to clean my profile as it's a fresh install on a new computer.
The issue was the same on LO 7.4.
Comment 3 Regina Henschel 2023-02-07 19:38:52 UTC
I cannot reproduce the problem. Tested with Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

Which icon theme do you use and which screen resolution?
Comment 4 jul 2023-02-08 06:53:25 UTC
Hi
It's not depending on the resolution I guess, since it happens either on the screen of my laptop, or on the external screen it is plugged.

FYI, my laptop screen conf is : 1920 x 1200 with an upscaling to 150%.

Regarding the button, I'm using the one on the "picture" tab (see screenshot).

BTW : this morning, for a short periode of time, I was no longer seeing the bug... But it is back.
Comment 5 jul 2023-02-08 06:53:55 UTC
Created attachment 185198 [details]
button
Comment 6 jul 2023-02-08 08:13:40 UTC
FYI, I guess there is an issue with win11 / LO 7.5 and display mechanisms. 
For instance, five minutes ago, I opened an excel file in LO. It was not full screen so I double-clicked the title bar to switch to full-screen. LO Froze and then crashed and closed.
I add a screenshot to illustrate the "freeze", even if I know it's not the purpose of this current bug.
If you think it's not relevant, please ignore this comment.

Is there a way to find or activate logs ? It would help you I guess.
Comment 7 jul 2023-02-08 08:14:18 UTC
Created attachment 185201 [details]
freeze before crash when turning full screen
Comment 8 Regina Henschel 2023-02-08 09:35:02 UTC
The crop handles are contained in an image in the icon theme. Your crop handles look as if a wrong part of the image is used. Reason can be, that the image is wrong or that 150% screen scale does not work for LO or that there is something special with Windows 11.

1. Goto Tools > Options > LibreOffice > View. Look at 'Icon Theme'. Which icon theme is currently selected? Try a different icon theme. Does the error still exists?

2. Please try a 125% screen scale. Does the error still exists? For scale larger than 125% (=120dpi) there exists some special code in LibreOffice which might be faulty.
Comment 9 jul 2023-02-08 09:49:28 UTC
Hello
I changed the icone theme and the screen scale (125%).
The issue is still there, and it is not systematic.
Please, see the gif enclosed :
- full screen, no crop handle icons 
- non-full-screen : the handle icons are back;
Please see the other screenshot : same issue seems to be there for resizing handles.
Comment 10 jul 2023-02-08 09:50:01 UTC
Created attachment 185205 [details]
resize handle also missing
Comment 11 jul 2023-02-08 09:50:37 UTC
Created attachment 185206 [details]
switching to non-full screen displays the handles
Comment 12 jul 2023-02-08 09:51:44 UTC
FYI, I was using the default icone theme and switch to several others, but the issue remains.
Comment 13 Regina Henschel 2023-02-08 14:31:41 UTC
I have set my Windows 10 to 150% screen resolution and can reproduce the problem then with all icon themes.

When you use the interactive-crop tool, a folder "cache" is generated and therein a subfolder which name equals the icon themename. Open it and then "150" > svx > res. Therein is the actual used cropmarkers.png image.

I guess there are these problems: The cropmarkers.png image has no dpi and even if it would have a dpi, LibreOffice does not use the information. Instead it uses the contained 231x96 pixel same as it would use the 154x64 pixel from a 100% screen resolution. The result is, that it cuts the individual crop markers from a wrong location.

As workaround you can replace the cropmarkers.png in the "150" folder with that from a "100" folder.

The resize handles belong to the markers.png. But I do not get problems with the resize markers.

Please write a separate bug report for the crash, in case you can reproduce the crash.
Comment 14 jul 2023-02-08 17:51:16 UTC
Thanks Regina for your help.
However, even if I have a past in the IT industry, now I'm just a teacher trying to use LO after years spent with MSO.
So I don't know if the advice regarding the cropmarker.png was for me or for LO dev team, but as a non-technical user, I won't use it.
To be honest, being a FOS enthusiast (using & giving money to FOS projects), in the case of LO, after 3 tries (one lasting one year), I'm still very frustrated. 
Indeed, LO receive a lot of attention, is communicating a lot about its new versions, calling itself an office suite for everyone... But, each time I try it, I face a lot of frustrating bugs making it  - according to me - not suitable for production use. 
For instance, after 2 days working with 7.5, I spent more time reporting bugs than really using the app. I faced crashes or bugs keeping me from doing basic tasks, so i'm reluctant using it more heavily, even considering pay ~150€ for a tool fits my needs, is reliable, but unfortunately not FOS at all.
All this is probably not suitable for a bug comment, but as I don't use social networks, I have little possibilities to communicate with the LO team, so here it is.
Again, thanks for your help & work. For now, I'm going to use LO 7.4, and see if it's better.
Comment 15 Stéphane Guillou (stragu) 2024-05-24 05:54:45 UTC
*** Bug 159189 has been marked as a duplicate of this bug. ***
Comment 16 Stéphane Guillou (stragu) 2024-08-19 02:37:24 UTC
Could not reproduce on Ubuntu 22.04 + GNOME 42.9 + Wayland, with fractional scaling at 150% and using the PNG Colibre icon theme.

Version: 24.2.5.2 (X86_64) / LibreOffice Community
Build ID: bffef4ea93e59bebbeaf7f431bb02b1a39ee8a59
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Seems Windows-specific as far as I can tell.
Comment 17 Regina Henschel 2024-08-19 10:27:02 UTC
(In reply to Stéphane Guillou (stragu) from comment #16)
> Could not reproduce on Ubuntu 22.04 + GNOME 42.9 + Wayland, with fractional
> scaling at 150% and using the PNG Colibre icon theme.

please use an SVG icon theme for testing. The error is specific to SVG icon themes, because when you use an SVG icon theme the bitmap is generated on first use of crop markers and cached in the 'Cache' folder in the user folder.
Comment 18 Regina Henschel 2024-08-21 11:44:23 UTC
I have received further feedback from testers on Linux and MacOS. This is indeed a bug that only affects Windows.
Comment 19 Commit Notification 2024-08-22 16:12:55 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fcccd6bf9feb46feb14a07aa22de5f9ea52d394c

tdf#153421 On Windows exclude cropmarkers.svg from scaling

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.