tdf#153421 On Windows exclude cropmarkers.svg from scaling

The file cropmarkers.svg is used to create individual crop markers.
That methods expects a certain, fixed size in unit pixel. The number of
pixels was wrong on Windows, if display scale is set so large that
resulting dpi is larger than 120.
The patch excludes this special file from scaling.

For testing you need to set display scale to larger than 125% in Windows
(125%*96dpi=120dpi). And remove any existing cropmarkers.png in
cache/themename_svg/DPI/svx/res/. 'DPI' therein is not your actual dpi
but the scaling factor from CountDPIScaleFactor.

Change-Id: I6b508e28f2f3782441ad1283cfe85c4bd1588383
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172019
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>